# Metal-Training-2021

./: ReadMe.md
MetalTrain-01-三角形/: CMakeLists.txt  generateProj.sh
MetalTrain-01-三角形/MetalTrain.xcodeproj/: project.pbxproj
MetalTrain-01-三角形/MetalTrain.xcodeproj/project.xcworkspace/xcuserdata/liwenyao.xcuserdatad/: UserInterfaceState.xcuserstate
MetalTrain-01-三角形/MetalTrain.xcodeproj/xcuserdata/liwenyao.xcuserdatad/xcschemes/: xcschememanagement.plist
MetalTrain-01-三角形/Renderer/: ViewController.m  myRenderer.h  myRenderer.m  myShader.metal  myShaderTypes.h
MetalTrain-01-三角形/SysApp/: AppDelegate.h  SceneDelegate.m
MetalTrain-01-三角形/assets/: Info.plist
MetalTrain-01-三角形/src/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
MetalTrain-02-图片与变换/MetalTrain02-ImageTransform.xcodeproj/: project.pbxproj
MetalTrain-02-图片与变换/MetalTrain02-ImageTransform.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MetalTrain-02-图片与变换/MetalTrain02-ImageTransform.xcodeproj/project.xcworkspace/xcuserdata/liwenyao.xcuserdatad/: UserInterfaceState.xcuserstate
MetalTrain-02-图片与变换/MetalTrain02-ImageTransform.xcodeproj/xcuserdata/liwenyao.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MetalTrain-02-图片与变换/MetalTrain02-ImageTransform.xcodeproj/xcuserdata/liwenyao.xcuserdatad/xcschemes/: xcschememanagement.plist
MetalTrain-02-图片与变换/Renderer/: ViewController.h  myShader.metal
MetalTrain-02-图片与变换/SysApp/: AppDelegate.m  SceneDelegate.h  main.m
